[b1002]完成初步的展示功能

--- a/config.json
+++ b/config.json
@@ -1,1 +1,1 @@
-{"createUserId": "1898a796bd164dd4a2bdab56bcef4596", "Monitoredfolders": "C:/Users/W10/Pictures/展示图片"}
+{"createUserId": "1898a796bd164dd4a2bdab56bcef4596", "Monitoredfolders": "C:/Users/W10/Pictures"}
