--- a/config.json
+++ b/config.json
@@ -1,1 +1,5 @@
-{"createUserId": "1898a796bd164dd4a2bdab56bcef4596", "Monitoredfolders": "C:/Users/W10/Pictures"}
+{
+    "createUserId": "1898a796bd164dd4a2bdab56bcef4596",
+    "Monitoredfolders": "C:/Users/W10/Pictures",
+    "autostart": false
+}
