--- a/config.json
+++ b/config.json
@@ -1,5 +1,1 @@
-{
-    "createUserId": "1898a796bd164dd4a2bdab56bcef4596",
-    "Monitoredfolders": "C:/Users/W10/Pictures",
-    "autostart": false
-}
+{"createUserId": "1898a796bd164dd4a2bdab56bcef4596", "Monitoredfolders": "D:/ldl/project/answer-card/v1", "autostart": false}
