[b1006]save_config被覆盖，更换函数名称save_config_simple

--- a/config.json
+++ b/config.json
@@ -1,1 +1,1 @@
-{"createUserId": "1898a796bd164dd4a2bdab56bcef4596", "Monitoredfolders": "D:/ldl/project/answer-card/v1", "autostart": false}
+{"Monitoredfolders": "C:/Users/W10/Pictures", "autostart": false}
